--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "npm ci --legacy-peer-deps && npm run build"
   publish = "dist"
   ignore = "contracts/*,hardhat.config.js,deploy-coin-toss.js"
 
