--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@fhevm/hardhat-plugin": "^0.3.0-0",
-    "@fhevm/mock-utils": "^0.1.0",
+    "@fhevm/mock-utils": "0.3.0-0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
