--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tanstack/react-query": "^5.86.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@zama-fhe/oracle-solidity": "^0.1.0",
-    "@zama-fhe/relayer-sdk": "^0.2.0",
+    "@zama-fhe/relayer-sdk": "0.3.0-5",
     "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "canvas-confetti": "^1.9.4",
